[project]
name = "ln-comprehensive-analysis"
version = "0.1.0"
description = "Topology and Network Dynamics of the Lightning Network: A Comprehensive Analysis"
requires-python = ">=3.12"
dependencies = [
"numpy==1.26.4",
"matplotlib",
"pandas",
"seaborn",
"requests",
"scikit-learn",
"scipy",
"tqdm",
"ray",
"nx-parallel>=0.3",
"networkx>=3.4.2",
"lntopo@git+https://github.com/ellariel/topology",
"littleballoffur@git+https://github.com/ellariel/littleballoffur",
]
